--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -761,3 +761,11 @@ a {
   line-height: 1.86;
   margin-top: 28px;
 }
+
+/* aos */
+[data-aos] {
+  visibility: hidden;
+}
+[data-aos].animate__animated {
+  visibility: visible;
+}
