--- a/assets/css/reponsive.css
+++ b/assets/css/reponsive.css
@@ -1,5 +1,8 @@
 /* PC */
 @media (min-width: 992px) {
+  .mobile-header {
+    display: none;
+  }
 }
 
 /* Tablet & Mobile */
@@ -40,6 +43,40 @@
   .menu-checkbox:checked ~ .menu-overlay {
     opacity: 1;
     visibility: visible;
+  }
+  /* 6. code cho menu trượt ra trượt vào */
+  .menu-drawer {
+    position: fixed;
+    background-color: #16466f;
+    inset: 0 40% 0 0;
+    z-index: 2;
+    transform: translateX(-100%);
+    transition: 0.5s;
+    padding: 60px;
+  }
+  /* 7 nếu menucheckbox được check thì menu-drawer hiện ra */
+  .menu-checkbox:checked ~ .menu-drawer {
+    transform: translateX(0);
+  }
+  /* 8 menu top */
+  .close__menu {
+    width: 24px;
+    color: #fff;
+  }
+  .menu-drawer__top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  #navbar__list--mobile {
+    margin-top: 25px;
+  }
+  .navbar__link {
+    display: block;
+    font-style: 2rem;
+  }
+  .navbar__link:hover {
+    background-color: #2e81ce;
   }
 }
 
