xong hero va service

--- a/assets/css/reponsive.css
+++ b/assets/css/reponsive.css
@@ -78,6 +78,40 @@
   .navbar__link:hover {
     background-color: #2e81ce;
   }
+  /* khối hero */
+  .hero {
+    flex-direction: column;
+    row-gap: 50px;
+  }
+  .hero__content {
+    order: 2;
+    width: 80%;
+    text-align: center;
+    margin: 22px auto;
+  }
+  .hero__row {
+    justify-content: center;
+  }
+  .hero__media {
+    order: 1;
+  }
+  /* our services */
+  .service__row {
+    flex-direction: column;
+    row-gap: 20px;
+  }
+  .service__img {
+    width: 100%;
+  }
+
+  .service__list {
+    text-align: center;
+  }
+
+  .service-item {
+    width: 90%;
+    text-align: start;
+  }
 }
 
 /* Tablet */
@@ -89,8 +123,6 @@
 }
 
 /* tạm ẩn */
-.hero,
-.footer,
-main {
+.footer {
   display: none;
 }
